--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrape">
         <div class="nav">
             <img src="/img/logo.png" alt="logo" class="logo">
-            <button class="container" onclick="drop()"></button>
+            <button class="btndrop" onclick="drop()"></button>
         </div>
         <div id="dropdown" class="dropdown-content">
             <ul class="dropdown_container">
